# WIMFS

./: CMakeLists.txt  main.cpp
core/: DatabaseAccess.cpp  DatabaseAccess.h  DbStructs.h  qt_db_conversions.h
ui/: MainWindow.cpp  MainWindow.h  mainwindow.ui
ui/model/: IdToIndexMap.h  ItemInstanceModel.cpp  ItemInstanceModel.h
